fix broken layout

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 html, body{
     height:100vh;
     width: 100%;
+    overflow-y: hidden;
 }
 .container {
     height: 100%;
@@ -34,6 +35,18 @@ html, body{
     right: 0;
 }
 
+#map p {
+    padding-left: 20px;
+    margin: 10px 0;
+    height: 20px;
+    font-size: 16px;
+}
+
+#map js-plotly-plot {
+    height: calc(100%-40px);
+}
+
+
 canvas {
     z-index: 100 !important;
 }
@@ -45,6 +58,10 @@ canvas {
 .graph_panel {
     display: flex;
     gap: 20px;
+}
+
+.graph_panel p {
+    margin: 12px 0
 }
 
 .graph_container {
